--- a/warehouse-app/package.json
+++ b/warehouse-app/package.json
@@ -7,6 +7,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-to-print": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
