--- a/warehouse-app/package.json
+++ b/warehouse-app/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "react-to-print": "^2.15.1",
     "web-vitals": "^2.1.4"
