--- a/warehouse-app/package.json
+++ b/warehouse-app/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
-    "qrcode": "^1.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^0.0.0",
-    "react-signature-canvas": "^1.1.0-alpha.2",
-    "react-to-print": "^2.15.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
+    "qrcode": "^1.5.3",
+    "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
